[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/CubeKB.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerEmptyFacesMaterial.tres" type="Material" id=2]
[ext_resource path="res://Player/dice.obj" type="ArrayMesh" id=3]
[ext_resource path="res://CameraGimbal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Health System/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://Items/Shotgun/Shotgun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/Tennis/TennisRacket.tscn" type="PackedScene" id=7]
[ext_resource path="res://Items/FireExtinguisher/FireExtinguisher.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/DiceSide.gd" type="Script" id=9]

[sub_resource type="BoxShape" id=2]

[sub_resource type="SphereShape" id=3]
radius = 20.0

[node name="CubeKB" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )
camera_path = NodePath("CameraGimbal")

[node name="Pivot" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Pivot"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="DiceSides" type="Spatial" parent="Pivot/MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="SideOne" type="Position3D" parent="Pivot/MeshInstance/DiceSides"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0 )
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Pivot/MeshInstance/DiceSides/SideOne"]
transform = Transform( -4.37114e-08, 4.37114e-08, -1, 4.37114e-08, 1, 4.37114e-08, 1, -4.37114e-08, -4.37114e-08, 0, 0, 0 )
pixel_size = 0.04

[node name="SideTwo" type="Position3D" parent="Pivot/MeshInstance/DiceSides"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Pivot/MeshInstance/DiceSides/SideTwo"]
transform = Transform( 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, 0, 0, 0 )
pixel_size = 0.04

[node name="SideThree" type="Position3D" parent="Pivot/MeshInstance/DiceSides"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1 )
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Pivot/MeshInstance/DiceSides/SideThree"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96046e-08, -1.06581e-14, 0 )
pixel_size = 0.04

[node name="SideFour" type="Position3D" parent="Pivot/MeshInstance/DiceSides"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Pivot/MeshInstance/DiceSides/SideFour"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96046e-08, -1.06581e-14, 0 )
pixel_size = 0.04

[node name="SideFive" type="Position3D" parent="Pivot/MeshInstance/DiceSides"]
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Pivot/MeshInstance/DiceSides/SideFive"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.19209e-07, 0, 0 )
pixel_size = 0.04

[node name="SideSix" type="Position3D" parent="Pivot/MeshInstance/DiceSides"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0 )
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Pivot/MeshInstance/DiceSides/SideSix"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
pixel_size = 0.04

[node name="SpotLight" type="SpotLight" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6, 0 )
spot_range = 7.2
spot_angle = 28.484

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CameraGimbal" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
rotation_speed = 1.0
target = NodePath("../Pivot/MeshInstance")

[node name="Health" parent="." instance=ExtResource( 5 )]

[node name="Weapons" type="Spatial" parent="."]

[node name="Shotgun" parent="Weapons" instance=ExtResource( 6 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 2.76458, 0 )
visible = false
skeleton = NodePath("../..")

[node name="TennisRacket" parent="Weapons" instance=ExtResource( 7 )]
transform = Transform( 0.527182, 0, 0, 0, 0.527182, 0, 0, 0, 0.527182, 0, 2.52838, 0 )
visible = false

[node name="FireExtinguisher" parent="Weapons" instance=ExtResource( 8 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 3.1, 0 )
visible = false

[node name="EnemyDetectionRadius" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="EnemyDetectionRadius"]
shape = SubResource( 3 )

[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
[connection signal="body_entered" from="EnemyDetectionRadius" to="." method="_on_EnemyDetectionRadius_body_entered"]
